fix listed price to render properly on smaller screen size

--- a/block-planes-client/src/components/marketplace/marketplace.css
+++ b/block-planes-client/src/components/marketplace/marketplace.css
@@ -164,7 +164,7 @@
 .label-listed-price {
   max-width: 100%;
   margin-top: 2px !important;
-  font-size: 0.9em;
+  font-size: 70%;
 }
 
 .eth-symbol{
@@ -198,4 +198,11 @@
 .form-div {
   position: absolute;
   top: 40%;
+}
+
+.marketplace-full-body {
+  position: absolute;
+  margin: 0px;
+  width:100%;
+  height: 80%;
 }
